// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuSelect applies translations 1`] = `
<select
  className="ais-MenuSelect__select"
  onChange={[Function]}
  value=""
>
  <option
    className="ais-MenuSelect__option"
    value=""
  >
    Everything
  </option>
  <option
    className="ais-MenuSelect__option"
    value="white"
  >
    white
     (
    10
    )
  </option>
  <option
    className="ais-MenuSelect__option"
    value="black"
  >
    black
     (
    20
    )
  </option>
  <option
    className="ais-MenuSelect__option"
    value="blue"
  >
    blue
     (
    30
    )
  </option>
  <option
    className="ais-MenuSelect__option"
    value="green"
  >
    green
     (
    30
    )
  </option>
  <option
    className="ais-MenuSelect__option"
    value="red"
  >
    red
     (
    30
    )
  </option>
</select>
`;

exports[`MenuSelect default menu select 1`] = `
<select
  className="ais-MenuSelect__select"
  onChange={[Function]}
  value=""
>
  <option
    className="ais-MenuSelect__option"
    value=""
  >
    See all
  </option>
  <option
    className="ais-MenuSelect__option"
    value="white"
  >
    white
     (
    10
    )
  </option>
  <option
    className="ais-MenuSelect__option"
    value="black"
  >
    black
     (
    20
    )
  </option>
  <option
    className="ais-MenuSelect__option"
    value="blue"
  >
    blue
     (
    30
    )
  </option>
  <option
    className="ais-MenuSelect__option"
    value="green"
  >
    green
     (
    30
    )
  </option>
  <option
    className="ais-MenuSelect__option"
    value="red"
  >
    red
     (
    30
    )
  </option>
</select>
`;
